--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "npm-run-all": "^4.1.5",
     "parcel": "^2.8.0",
     "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "lazysizes": "^5.3.2"
   }
 }
